# wasm-experiments

./: .gitignore  LICENSE
.devcontainer/: Dockerfile  devcontainer.json
src/dotnet-host/: Extensions.cs  Host.csproj  Program.cs
src/dotnet-host/utils/: Allocator.cs  Host.cs
src/wasm-lib/: Cargo.toml
src/wasm-lib/src/: host_api.rs  lib.rs  resource.rs
