[package]
name = "wasmlib"
version = "0.1.0"
authors = ["Chris Granade <cgranade@cgranade.com>"]
edition = "2018"

[lib]
crate-type = ['cdylib']



[dependencies]
wasm-bindgen = "=0.2.55"
ndarray = "0.13.0"
num-complex = "0.2.3"
lazy_static = "1.4.0"
uuid = { version="0.8.1", features=[ "wasm-bindgen", "v4" ] }
